--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -16,7 +17,9 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
