--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "socket.io": "^4.7.3",
-    "socket.io-client": "^4.7.4"
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
