--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-toastify": "^10.0.0",
     "socket.io": "^3.1.2",
     "socket.io-client": "^3.1.3"
   },
