--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scroll-to-bottom": "^4.2.0",
