--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.6.5",
     "react-router-dom": "^6.21.1",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io": "^3.1.2",
