--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
